# FluxoDeCaixa

./: .gitignore  .graphifyignore  Makefile  README.md
docs/: .gitkeep
fintechfluxcx/: graphify-out
platform/shared/: pyproject.toml
platform/shared/fcx_shared/: __init__.py  logging.py  otel.py  settings.py  tracing.py
platform/shared/tests/: conftest.py  test_logging.py  test_settings.py  test_tracing.py
scripts/: bootstrap-vm.sh  build-images.sh  cluster-down.sh  cluster-up.sh  deploy-apps.sh  deploy-gitea.sh  deploy-platform.sh  deploy-registry.sh  logs.sh  multipass-fluxo-vm.sh  restart-svc.sh  run-e2e.sh  seed-images.sh  test-harbor-admin-auth.sh  test-harbor-auth-url.sh  (+15 more)
services/consulta/: .coverage  Dockerfile  pyproject.toml
services/consulta/app/: cache.py  db.py  domain.py  main.py
services/consulta/app/api/: deps.py
services/consulta/app/api/routes/: consolidado.py  lancamentos.py
services/consulta/app/auth/: jwt.py
services/consulta/app/models/: __init__.py  consolidado.py  lancamento.py
services/consulta/app/repository/: lancamentos_read.py  read_model.py
services/consulta/app/schemas/: consolidado.py  health.py  lancamentos.py
services/consulta/app/services/: consolidado_read_service.py  lancamentos_read_service.py
services/consulta/tests/: conftest.py
services/consulta/tests/helpers/: jwt.py
services/consulta/tests/unit/: test_auth.py  test_cache.py  test_consolidado_read_service.py  test_health.py  test_peak_load_stub.py  test_rf02_get_lancamentos.py  test_rf03_get_consolidado.py  test_scaffold.py  test_settings.py
services/lancamentos/: .coverage  Dockerfile  pyproject.toml
services/lancamentos/app/: db.py  domain.py  errors.py  main.py  metrics.py
services/lancamentos/app/api/: deps.py
services/lancamentos/app/api/routes/: lancamentos.py
services/lancamentos/app/models/: __init__.py  lancamento.py
services/lancamentos/app/outbox/: __init__.py  backoff.py  config.py
services/lancamentos/app/pagination/: cursor.py
services/lancamentos/app/repository/: lancamentos.py  outbox.py
services/lancamentos/app/schemas/: health.py  lancamentos.py
services/lancamentos/app/services/: lancamentos_service.py  nats_publisher.py
services/lancamentos/app/workers/: outbox_worker.py
services/lancamentos/migrations/: env.py
services/lancamentos/migrations/versions/: 20260520_001_lancamentos_outbox.py  20260520_002_outbox_retry_dlq.py
services/lancamentos/tests/: conftest.py
services/lancamentos/tests/helpers/: jwt.py
services/lancamentos/tests/unit/: test_cursor_pagination.py  test_health.py  test_idempotency_repository.py  test_migrations.py  test_outbox_backoff.py  test_outbox_migration.py  test_outbox_repository.py  test_outbox_worker.py  test_rf01_post_lancamentos.py  test_rf02_get_lancamentos.py  test_scaffold.py  test_security_otel.py  test_settings.py
(+154 files in other folders)
