[project]
name = "fcx-shared"
version = "0.1.0"
description = "Shared Pydantic settings and structured logging for fluxo-caixa services"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fcx_shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
