[project]
name = "consulta"
version = "0.1.0"
description = "svc-consulta — read path em pico, Redis + PG consolidado"
requires-python = ">=3.12"
dependencies = [
    "fcx-shared",
    "fastapi>=0.115.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-logging>=0.49b0",
    "opentelemetry-sdk>=1.28.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.12.1",
    "pydantic-settings>=2.6.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv.sources]
fcx-shared = { path = "../../platform/shared", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 70
show_missing = true
