[project]
name = "lancamentos"
version = "0.1.0"
description = "svc-lancamentos — write path, idempotência, outbox"
requires-python = ">=3.12"
dependencies = [
    "fcx-shared",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv.sources]
fcx-shared = { path = "../../platform/shared", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
